add gateway and SAS, streamline documentation (#3)