@@ -1,80 +1,33 @@
 # ADR-04: Virtual Threads over Reactive Streams
 
-**Status:** Accepted  
-**Date:** May 2026
+**Status:** Accepted
 
-## Decision 
-Use Java 25 virtual threads for all services. Do not use Spring WebFlux. Do not use structured concurrency (`StructuredTaskScope`).
+**Date:** June 2026
 
-> **Implementation.** `spring.threads.virtual.enabled=true` is set, so Tomcat workers, `@Scheduled` tasks, `@Async`, and
-> AMQP listeners all run on virtual threads. Each service still wires an explicit `VirtualThreadTaskExecutor` on its
-> listener container factory to give consumer threads a service-scoped name prefix (e.g. `amqp-geo-`) for log and trace
-> diagnostics; the executor is otherwise equivalent to the auto-enabled one. Per-service consumer sizing lives in each
-> service's `design.md`; the sizing principle is in ADR-14 §Consumer concurrency.
+## Decision
+
+Use Java 25 virtual threads for all services. Use Spring MVC instead of Spring WebFlux. Do not use structured concurrency (`StructuredTaskScope`).
+
+(`spring.threads.virtual.enabled=true` puts Tomcat workers, `@Scheduled`, `@Async`, and AMQP listeners on virtual threads. Each service still wires an explicit `VirtualThreadTaskExecutor` on its listener container — functionally equivalent to the auto-enabled one, but giving consumer threads a service-scoped name prefix (e.g. `amqp-geo-`) for log and trace diagnostics. Per-service consumer sizing lives in each service's `design.md` and ADR-13.)
 
 ## Context
 
-The system is I/O-bound — the geo-scoring service blocks on Nominatim geocoding calls and Redis `GEOSEARCH`
-commands, the decision-engine blocks on PostgreSQL transactions and RabbitMQ message handling. Concurrency model choice
-affects readability, debugging, and operational complexity.
-
-Three approaches were evaluated:
-
-1. **Spring WebFlux (Project Reactor).** Reactive, non-blocking I/O using `Mono`/`Flux` composition. Proven at scale;
-   prior professional experience exists with this stack.
-2. **Virtual threads only.** Finalized in Java 21 (JEP 444), supported in Spring Boot 3.2+. Blocking code that scales
-   like reactive code, with no API changes required for existing Spring MVC, Spring AMQP, Spring Data JDBC, and Spring
-   Data Redis usage.
-3. **Virtual threads + structured concurrency.** Adds `StructuredTaskScope` (JEP 505, Java 25) for coordinating parallel
-   subtasks with automatic cancellation and timeout handling.
+The system is I/O-bound — geo-scoring blocks on Nominatim geocoding and Redis `GEOSEARCH`, the decision-engine on PostgreSQL transactions and RabbitMQ handling — at modest volumes (≤50,000 events/day at peak). Three approaches were evaluated: WebFlux (Project Reactor), virtual threads alone, and virtual threads plus structured concurrency.
 
 ## Reasoning
 
-**Why not WebFlux.** The system's workload is I/O-bound at modest volumes (≤50,000 events/day at peak). WebFlux's
-primary advantage — non-blocking I/O without thread-per-request exhaustion — is solved equally well by virtual threads,
-which allow blocking calls without consuming platform threads. WebFlux's differentiating strength is backpressure
-propagation for streaming workloads where producers can outpace consumers. This system has no streaming data flow — the
-decision-engine processes discrete enrollment requests, and the event-driven architecture (RabbitMQ with bounded queues
-and consumer prefetch) provides natural flow control without reactive backpressure. The reactive programming model also
-imposes costs that are not offset here: `Mono.zip()` chains are harder to read than sequential blocking code, R2DBC is
-less mature than JDBC for the transactional guarantees the correlation record requires (ADR-14), and reactive stack
-traces complicate debugging.
+**Why not WebFlux.** Its primary advantage — non-blocking I/O without thread-per-request exhaustion — is matched by virtual threads, which allow blocking calls without consuming platform threads. Its differentiating strength, backpressure propagation for streaming workloads, isn't needed here: the system has no streaming flow, and RabbitMQ with bounded queues and consumer prefetch already provides flow control. The reactive costs aren't offset — `Mono.zip()` chains read worse than sequential blocking code, R2DBC is less mature than JDBC for the transactional guarantees the correlation record requires, and reactive stack traces complicate debugging. Introducing WebFlux anywhere would also impose a second programming, concurrency, and testing model on an otherwise-MVC codebase — including the gateway, which uses the MVC-based Spring Cloud Gateway variant (`spring-cloud-starter-gateway-server-webmvc`) rather than the reactive default, so the servlet model holds end to end.
 
-**Why virtual threads.** All blocking operations in both services — JDBC transactions, Redis commands via Lettuce's
-synchronous API, Nominatim HTTP calls, RabbitMQ message consumption — run on virtual threads without code changes.
-Spring Boot 4.x handles this transparently: Tomcat request processing, `@Async` methods, `@Scheduled` tasks, and Spring
-AMQP listeners all execute on virtual threads when enabled. The geo-scoring service's stateless, I/O-bound processing 
-(geocode → GEOADD → GEOSEARCH → emit result) benefits directly — each RabbitMQ message is handled on its own virtual
-thread with no thread pool sizing concerns.
+**Why virtual threads.** Every blocking operation in both services — JDBC, Lettuce's synchronous Redis API, Nominatim HTTP, RabbitMQ consumption — runs on virtual threads with no code changes; Spring Boot handles Tomcat, `@Async`, `@Scheduled`, and AMQP listeners transparently. Geo-scoring's stateless I/O-bound path (geocode → GEOADD → GEOSEARCH → emit) gets one virtual thread per message with no pool-sizing concern.
 
-**Why Java 25 specifically.** The blocking model leans on a virtual thread unmounting cleanly even while its carrier
-holds a `synchronized` monitor — and the clients this stack blocks on do exactly that internally: `pgjdbc` synchronizes
-on the connection during query execution, and parts of HikariCP and Lettuce guard state the same way. Through Java 21
-those monitors *pinned* the virtual thread to its carrier; under a downstream tail-latency spike, hundreds of threads
-pinned inside a driver monitor could starve the carrier pool and freeze unrelated requests. JEP 491 (delivered in Java
-24) removes monitor pinning — a virtual thread inside a `synchronized` block now releases its carrier — so on Java 25
-the blocking JDBC/Redis path is safe under load without reentrant-lock retrofits or driver patches. The bounded HikariCP
-pool stays the deliberate back-pressure limit: virtual threads park on it, they do not pin it, and at this system's
-volumes (≤50,000 events/day) pool sizing is a tuning concern, not a starvation risk.
+**Why Java 25 specifically.**
+JEP 491 removes virtual-thread pinning on synchronized monitors, which the blocking JDBC/Redis drivers rely on — without it, threads blocked inside a driver monitor could starve the carrier pool under load; HikariCP connection pools remains in the intentional back-pressure limit.
 
-**Why not structured concurrency.** `StructuredTaskScope` solves the problem of forking parallel subtasks within a
-single execution context, joining them with a timeout, and handling partial results. This would be a natural fit if the
-decision-engine dispatched checks synchronously and waited for results. However, this system uses event-driven
-scatter-gather via RabbitMQ (ADR-08, ADR-14): the decision-engine publishes an event to a topic exchange and returns
-immediately. The fan-out to check services (geo-scoring, identity, future additions) is handled by RabbitMQ's exchange
-routing, not by parallel forks in the decision-engine. Results arrive asynchronously as separate RabbitMQ messages —
-potentially minutes apart and across process restarts. The join mechanism is the durable correlation record in
-PostgreSQL (ADR-14), not an in-memory scope. `StructuredTaskScope` cannot span asynchronous message deliveries or
-survive process restarts — it is the wrong abstraction for this coordination pattern. Adopting it would require
-restructuring the architecture around synchronous dispatch, losing the failure isolation and durability that the
-event-driven design provides.
+**Why not structured concurrency.**
+Structured Concurrency fits synchronous in-process fan-out; our scatter-gather is async over RabbitMQ and the join is the durable correlation record, which a `StructuredTaskScope` can't span or survive — and it's still preview in 25
 
-**Loses:** WebFlux's backpressure propagation (not needed — event-driven architecture with RabbitMQ provides flow
-control). The maturity and breadth of community resources around reactive Spring patterns (mitigated by the simplicity
-of the blocking model — there is less to debug).
+## Consequences
 
-**Alternative considered:** Using virtual threads with structured concurrency for the scatter phase, forking parallel
-publish calls within a `StructuredTaskScope`. Rejected because (a) the RabbitMQ topic exchange already handles fan-out
-from a single publish, (b) even with explicit per-service publishes, each publish completes in sub-milliseconds with no
-I/O worth parallelizing, and (c) structured concurrency is a preview feature in Java 25 (JEP 505) requiring
-`--enable-preview` flags — complexity not justified without a genuine coordination need.
+**Gains:** Every blocking call — JDBC, Lettuce's synchronous API, Nominatim HTTP, AMQP consumption — runs as written, with no reactive rewrite: sequential code that reads in execution order, ordinary stack traces, and the mature JDBC transactional path the correlation record needs. One programming, concurrency, and testing model across all services, the gateway included.
+
+**Loses:** WebFlux's backpressure propagation.
